10/23 티져 오타 수정
10/23 티져 오타 수정

--- a/css/site_global.css
+++ b/css/site_global.css
@@ -113,6 +113,12 @@ a.nontext /* used to override default properties of 'a' tag */
 	font-weight: normal;
 }
 
+a,.Link a
+{
+	color: inherit;
+	text-decoration: inherit;
+}
+
 .Link a:link
 {
 	color: #000000;
