--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000009;
-	background-color: #73DAD4;
+	color: #0000E7;
+	background-color: #01661F;
 }
 
 .html
@@ -171,8 +171,8 @@
 	width: 226px;
 	min-height: 20px;
 	background-color: transparent;
-	line-height: 15px;
 	font-size: 10px;
+	line-height: 15px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -238,8 +238,8 @@
 	width: 226px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 15px;
 	font-size: 10px;
+	line-height: 15px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-top: 10px;
 	position: relative;
@@ -280,8 +280,8 @@
 	width: 226px;
 	min-height: 20px;
 	background-color: transparent;
-	line-height: 15px;
 	font-size: 10px;
+	line-height: 15px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -321,8 +321,8 @@
 	width: 226px;
 	min-height: 20px;
 	background-color: transparent;
-	line-height: 15px;
 	font-size: 10px;
+	line-height: 15px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -371,8 +371,8 @@
 	min-height: 60px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -421,8 +421,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -472,8 +472,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 656px;
 	position: relative;
@@ -517,8 +517,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 656px;
 	position: relative;
@@ -562,8 +562,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 656px;
 	position: relative;
@@ -607,8 +607,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 656px;
 	position: relative;
@@ -659,8 +659,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 656px;
 	position: relative;
